--- a/Money tracker/Money tracker/Cell/ExpenseTableViewCell.xib
+++ b/Money tracker/Money tracker/Cell/ExpenseTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,46 +18,38 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="w8P-xy-H6g">
-                        <rect key="frame" x="16" y="2" width="63" height="88"/>
+                        <rect key="frame" x="16" y="2" width="44.5" height="88"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bR-9m-VyL">
-                                <rect key="frame" x="0.0" y="0.0" width="63" height="42"/>
+                                <rect key="frame" x="0.0" y="0.0" width="44.5" height="39.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGX-gX-nVc">
-                                <rect key="frame" x="0.0" y="44" width="63" height="24"/>
+                                <rect key="frame" x="0.0" y="41.5" width="44.5" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUJ-dl-bfK">
-                                <rect key="frame" x="0.0" y="70" width="63" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMs-xL-ygA">
+                                <rect key="frame" x="0.0" y="67.5" width="44.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMs-xL-ygA">
-                        <rect key="frame" x="268" y="36" width="36" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
+                <color key="backgroundColor" systemColor="systemGray6Color"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="w8P-xy-H6g" secondAttribute="bottom" constant="2" id="7lV-hv-mfQ"/>
                     <constraint firstItem="w8P-xy-H6g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="KoN-iO-Jy7"/>
-                    <constraint firstItem="zMs-xL-ygA" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NC5-Am-DeJ"/>
-                    <constraint firstAttribute="trailing" secondItem="zMs-xL-ygA" secondAttribute="trailing" constant="16" id="RnW-lb-MM5"/>
                     <constraint firstItem="w8P-xy-H6g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ULv-QC-Qbk"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="categoryLabel" destination="gUJ-dl-bfK" id="34Y-82-gcz"/>
                 <outlet property="dateLabel" destination="zMs-xL-ygA" id="ya1-b6-YTN"/>
                 <outlet property="priceLabel" destination="BGX-gX-nVc" id="fsP-LD-VdT"/>
                 <outlet property="titleLabel" destination="9bR-9m-VyL" id="fbQ-DV-hco"/>
@@ -64,4 +57,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="80.357142857142847"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
